--- a/src/utils/variables.scss
+++ b/src/utils/variables.scss
@@ -1,5 +1,16 @@
-$card-background: linear-gradient(114.99deg, #471CA9 -0.99%, #5736A3 54.28%, #4B2A99 78.99%);
-$bg-box-shadow: -2.5777px 6.87386px 20.6216px rgba(0, 0, 0, 0.23);
-$secondary-color: #EBD8FF;
-$btn-: #5CD3A8;
+$card-background: linear-gradient(
+  114.99deg,
+  #471ca9 -0.99%,
+  #5736a3 54.28%,
+  #4b2a99 78.99%
+);
+$card-box-shadow: -2.5777px 6.87386px 20.6216px rgba(0, 0, 0, 0.23);
+$secondary-color: #ebd8ff;
+$btn-text-color: #373737;
+$btn-active: #5cd3a8;
 $btn-box-shadow: 0px 3.43693px 3.43693px rgba(0, 0, 0, 0.25);
+$font: "Montserrat", sans-serif;
+$line-box-shadow: 0px 3.43693px 3.43693px rgba(0, 0, 0, 0.06),
+  inset 0px -1.71846px 3.43693px #ae7be3, inset 0px 3.43693px 2.5777px #fbf8ff;
+$avatar-box-shadow: 0px 4.39163px 4.39163px rgba(0, 0, 0, 0.06),
+  inset 0px -2.19582px 4.39163px #ae7be3, inset 0px 4.39163px 3.29372px #fbf8ff;
