--- a/src/components/Tweet/Tweet.module.scss
+++ b/src/components/Tweet/Tweet.module.scss
@@ -52,7 +52,7 @@
 .line {
   position: absolute;
   top: 214px;
-  width: 380px;
+  width: 100%;
   height: 8px;
   background-color: $secondary-color;
   box-shadow: $line-box-shadow;
