--- a/src/utils/variables.scss
+++ b/src/utils/variables.scss
@@ -4,6 +4,7 @@ $card-background: linear-gradient(
   #5736a3 54.28%,
   #4b2a99 78.99%
 );
+$main: #471ca9;
 $card-box-shadow: -2.5777px 6.87386px 20.6216px rgba(0, 0, 0, 0.23);
 $secondary-color: #ebd8ff;
 $btn-text-color: #373737;
