--- a/src/components/Navigation/Navigation.module.scss
+++ b/src/components/Navigation/Navigation.module.scss
@@ -1,15 +1,56 @@
-.header {
-  position: fixed;
-  height: 80px;
-  width: 100%;
+@import "/src/utils/variables.scss";
+
+.container {
+  text-align: center;
 }
 
-.list {
+.header {
+  position: fixed;
+  top: 0;
+  height: 60px;
+  width: 100%;
   display: flex;
   justify-content: center;
+  align-items: center;
+  background-color: #471ca9;
+  z-index: 1;
+}
+
+.links {
+  display: flex;
+  justify-content: center;
+  align-items: center;
 
   li:first-child {
-    margin-right: 30px;
+    margin-right: 60px;
+  }
+
+  a {
+    position: relative;
+    text-transform: uppercase;
+    color: $secondary-color;
+    font-weight: 600;
+    font-size: 24px;
+    padding: 10px 20px;
+    border-radius: 12px;
+    transition: 0.2s all;
+
+    &:after {
+      background: none repeat scroll 0 0 transparent;
+      bottom: 0;
+      content: "";
+      display: block;
+      height: 3px;
+      left: 50%;
+      position: absolute;
+      background: $secondary-color;
+      transition: width 0.3s ease 0s, left 0.3s ease 0s;
+      width: 0;
+    }
+    &:hover:after {
+      width: 100%;
+      left: 0;
+    }
   }
 }
 
