--- a/src/components/Tweet/Tweet.module.scss
+++ b/src/components/Tweet/Tweet.module.scss
@@ -26,14 +26,16 @@
 .picture {
   position: absolute;
   top: 28px;
-  left: 36px;
+  left: 50%;
+  transform: translate(-50%, 0);
 }
 
 .avatar {
   position: absolute;
   border-radius: 50%;
   top: 178px;
-  left: 150px;
+  left: 50%;
+  transform: translate(-50%, 0);
   width: 80px;
   height: 80px;
   background-color: $secondary-color;
@@ -71,6 +73,7 @@
 }
 
 .btn {
+  position: relative;
   width: 196px;
   height: 50px;
   margin-top: 25px;
@@ -84,6 +87,34 @@
   font-size: 18px;
   line-height: 22px;
   color: $btn-text-color;
+
+  &:after {
+    content: "";
+    display: block;
+    position: absolute;
+    border-radius: 10px;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    opacity: 0;
+    transition: all 0.5s;
+    box-shadow: 0 0 5px 20px white;
+  }
+
+  &:active:after {
+    box-shadow: 0 0 0 0 white;
+    position: absolute;
+    border-radius: 10px;
+    left: 0;
+    top: 0;
+    opacity: 1;
+    transition: 0s;
+  }
+
+  &:active {
+    top: 1px;
+  }
 }
 
 .followed {
