--- a/src/components/Navigation/Navigation.module.scss
+++ b/src/components/Navigation/Navigation.module.scss
@@ -30,7 +30,7 @@
     text-transform: uppercase;
     color: $secondary-color;
     font-weight: 600;
-    font-size: 24px;
+    font-size: 20px;
     padding: 10px 20px;
     border-radius: 12px;
     transition: 0.2s all;
@@ -56,4 +56,6 @@
 
 .main {
   padding: 80px 60px 0;
+  display: flex;
+  justify-content: center;
 }
