--- a/src/pages/Tweets/Tweets.module.scss
+++ b/src/pages/Tweets/Tweets.module.scss
@@ -2,12 +2,14 @@
 
 .tweets-container {
   text-align: center;
-  width: 380px;
 }
 
-.tweet {
+.list {
   display: flex;
+  flex-wrap: wrap;
   justify-content: center;
+  gap: 25px;
+  margin-bottom: 30px;
 }
 
 .btn-load-more {
@@ -16,7 +18,7 @@
   margin-bottom: 30px;
   border: transparent;
   border-radius: 10px;
-  background: #a981d4;
+  background: $main;
   text-transform: uppercase;
   font-family: $font;
   font-weight: 600;
@@ -24,7 +26,12 @@
   line-height: 22px;
   color: $secondary-color;
   box-shadow: 7px 6px 28px 1px rgba(0, 0, 0, 0.24);
-  transition: 0.2s all;
+  transition: 0.3s all;
+
+  &:hover {
+    transition: 0.3s all;
+    background: $btn-hover;
+  }
 
   &:active {
     transform: scale(0.98);
@@ -42,10 +49,17 @@
   border-color: transparent;
   border-radius: 8px;
   padding: 5px;
+  transition: 0.3s all;
+
+  &:hover {
+    transition: 0.3s all;
+    background: $btn-hover;
+  }
 }
 
 .back-container {
-  display: flex;
+  display: inline-flex;
+  width: 380px;
   justify-content: space-between;
   margin-bottom: 15px;
 }
@@ -56,6 +70,12 @@
   color: $secondary-color;
   text-transform: uppercase;
   border-radius: 8px;
+  transition: 0.3s all;
+
+  &:hover {
+    transition: 0.3s all;
+    background: $btn-hover;
+  }
 }
 
 .dropdown {
