--- a/src/utils/variables.scss
+++ b/src/utils/variables.scss
@@ -4,11 +4,12 @@ $card-background: linear-gradient(
   #5736a3 54.28%,
   #4b2a99 78.99%
 );
-$main: #471ca9;
+$main: #5736a3;
 $card-box-shadow: -2.5777px 6.87386px 20.6216px rgba(0, 0, 0, 0.23);
 $secondary-color: #ebd8ff;
 $btn-text-color: #373737;
 $btn-active: #5cd3a8;
+$btn-hover: #ae7be3;
 $btn-box-shadow: 0px 3.43693px 3.43693px rgba(0, 0, 0, 0.25);
 $font: "Montserrat", sans-serif;
 $line-box-shadow: 0px 3.43693px 3.43693px rgba(0, 0, 0, 0.06),
