--- a/src/components/Tweet/Tweet.module.scss
+++ b/src/components/Tweet/Tweet.module.scss
@@ -14,6 +14,17 @@
   text-transform: uppercase;
   box-shadow: $card-box-shadow;
   text-align: center;
+
+  &::before {
+    content: "";
+    position: absolute;
+    top: 214px;
+    left: 0px;
+    width: 100%;
+    height: 8px;
+    background-color: $secondary-color;
+    box-shadow: $line-box-shadow;
+  }
 }
 
 .logo {
